--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -19,6 +19,11 @@
   font-size: 22px;
   font-family: "Source Sans Pro", sans-serif;
 }
+
+#tweets article h4 img {
+  height: 40px;
+}
+
 #tweets article h5 {
   font-weight: 500;
   font-size: 24px;
@@ -30,6 +35,7 @@
   border: 5px solid black;
   margin-top: 30px;
   margin-bottom: 10px;
+  opacity: 0.5;
 }
 
 #tweets p {
@@ -50,11 +56,7 @@
 
 #tweets article:hover {
   box-shadow: 5px 5px 3px #666;
-  font-weight: 600;
-}
-
-#tweets article:hover h4 {
-  font-weight: bold;
+  opacity: 1; 
 }
 
 #tweets article:hover h5 {
